syntax = "proto3";

package service.ourchat.msg_delivery.v1;

import "google/protobuf/timestamp.proto";
import "service/ourchat/session/invite_session/v1/invite_session.proto";

// One piece of message
message OneMsg {
  // Type of the message
  oneof data {
    string text = 2;
  }
}

message SendMsgRequest {
  // from which session
  uint64 session_id = 1;
  // time the message is sent
  google.protobuf.Timestamp time = 2;
  repeated OneMsg bundle_msgs = 3;
}

message FetchMsgsRequest {
  // Get messages after this time
  google.protobuf.Timestamp time = 1;
}

message FetchMsgsResponse {
  // different type of message
  oneof data {
    Msg msg = 1;
    session.invite_session.v1.InviteSession invite_session = 2;
  }
}

message Msg {
  // time of the message
  google.protobuf.Timestamp time = 1;
  // id of the message
  uint64 msg_id = 2;
  repeated OneMsg bundle_msgs = 3;
  // from which session
  uint64 session_id = 4;
  // Sender id
  uint64 sender_id = 5;
}

message SendMsgResponse {
  // id of the message
  uint64 msg_id = 1;
}
